# financial-etl

./: .env.example  .gitignore  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: definitions.py  extract.py  load.py  transform.py
app/resources/: db_conn.py
dashboard/: Dockerfile  app.py
infra/: Dockerfile.etl
infra/database/: create_database.sql
infra/pgadmin/: servers.json
markowitz/: Dockerfile  main.py  requirements.txt
src/: models.py
src/client/: FinnhubClient.py
